# tools

./: README.md  pyproject.toml
src/motion_tools/: __init__.py  cli.py  clients.py
tests/: test_cli.py
